# monorepo

./: .bazelrc  .gitignore  BUILD  WORKSPACE  go.mod  helpers.bzl  variables.bzl
pkg/: BUILD.bazel
pkg/util/: BUILD.bazel  string.go
scripts/: bazel_python.sh  bazel_workspace_status.sh
services/helloworld/: BUILD.bazel  main.go
services/lorem/: BUILD.bazel  main.go
