load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")
load("//:helpers.bzl", "cref", "creponame", "cimagename", "cpushname")
load("//:variables.bzl", "DOCKER_REGISTRY_URL")

BINARY_NAME = "helloworld"

IMAGE_NAME = cimagename(BINARY_NAME)

PUSH_NAME = cpushname(BINARY_NAME)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/supermock/monorepo/services/helloworld",
    visibility = ["//visibility:public"],
    deps = ["//pkg/util:go_default_library"],
)

go_binary(
    name = BINARY_NAME,
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_image(
    name = IMAGE_NAME,
    binary = cref(BINARY_NAME),
)

container_push(
    name = PUSH_NAME,
    image = cref(IMAGE_NAME),
    format = "Docker",
    registry = DOCKER_REGISTRY_URL,
    repository = creponame(BINARY_NAME),
    tag = "{BUILD_HASH_SHORT}",
)
